added scss logo animation

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,9 +1,10 @@
 <section>
   <div class="content">
-     <div class="bluescreen">
-  </div>
+    <div class="bluescreen">
+    </div>
     <div class="background-content">
       <div class="logo-wrapper slide">
+        <img class="logo-white" src="assets/img/login/Join logo_white.svg" alt="Logo Join Mobile">
         <img id="animated-logo" class="logo" src="assets/img/header/Logo.png" alt="Logo Join">
       </div>
       <div class="login-nav">
@@ -11,7 +12,6 @@
         <button class="register-button" routerLink="/signup">Sign up</button>
       </div>
     </div>
-
     <div class="login-container">
       <div class="login-overlay">
         <div class="login-title">
