--- a/src/app/shared/help-me/help-me.component.scss
+++ b/src/app/shared/help-me/help-me.component.scss
@@ -62,13 +62,17 @@
     }
 }
 
+.header {
+    z-index: 25;
+}
+
 .back-button {
     position: fixed;
     top: 15em;
     right: 10em;
     border: none;
     background: rgba($color: #f6f7f8, $alpha: 0.4);
-    z-index: 200000;
+    z-index: 20;
     object-fit: contain;
     height: 2.5em;
     width: 3em;
