feat:&style Signup Validation & logic

--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -4,6 +4,7 @@ section {
     height: 100dvh;
     font-size: 10px;
     user-select: none;
+    flex: 1;
 
     .bluescreen {
         position: fixed;
