--- a/src/styles.scss
+++ b/src/styles.scss
@@ -276,3 +276,7 @@ body {
     font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
+app-login{
+    display: flex;
+    background-color: #f0f0f0;
+}
