--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,9 +1,7 @@
 #help-me-overlay {
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 8dvh;
+    left: 230px;
     width: 100%;
-    height: 100dvh;
-    z-index: 10;
-    max-width: 1920px;
+    max-width: (1920px - 230px);
 }
