--- a/src/app/shared/privacy-sign-in/privacy-sign-in.component.html
+++ b/src/app/shared/privacy-sign-in/privacy-sign-in.component.html
@@ -14,7 +14,10 @@
             </div>
         </div></div>
     <div class="main-content-input">
-    <app-header></app-header>
+    <header>
+        <img src="assets/img/header/Logo.png" alt="">
+        <div class="header-title">Kanban Project Management Tool</div>
+    </header>
         <div>
         <h1>Privacy Policy</h1>
             <p> <i>Last updated: July 12, 2025</i> </p>
