login start animation

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,7 +4,7 @@
   </div>
     <div class="background-content">
       <div class="logo-wrapper slide">
-        <img id="animated-logo" class="logo" src="assets/img/header/Logo.png" alt="Logo Join">
+        <!-- <img id="animated-logo" class="logo" src="assets/img/header/Logo.png" alt="Logo Join"> -->
       </div>
       <div class="login-nav">
         <p>Not a Join User?</p>
