feat: code cleaning ready to submit & JsDOC

--- a/src/app/kanban/kanban-board/card/card.component.html
+++ b/src/app/kanban/kanban-board/card/card.component.html
@@ -15,7 +15,7 @@
   <div class="testcontainer">
     <div class="category-moveto">
       <div class="category {{task.category?.toLowerCase()?.replace(' ', '-')}}">{{task.category}} </div>
-      <div class="move-to-mobile" (click)="openMobileOverlay($event);debug()">
+      <div class="move-to-mobile" (click)="openMobileOverlay($event)">
         <img src="assets/img/kanban-board/mobileMoveToButton.png" alt="">
       </div>
     </div>
