--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,8 +4,8 @@
     </div>
     <div class="background-content">
       <div class="logo-wrapper slide">
-        <img class="logo-white" src="assets/img/login/Join logo_white.svg" alt="Logo Join Mobile">
-        <img id="animated-logo" class="logo" src="assets/img/header/Logo.png" alt="Logo Join">
+        <!-- <img class="logo-white" src="assets/img/login/Join logo_white.svg" alt="Logo Join Mobile"> -->
+        <!-- <img id="animated-logo" class="logo" src="assets/img/header/Logo.png" alt="Logo Join"> -->
       </div>
       <div class="login-nav">
         <p>Not a Join User?</p>
