--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,27 @@
+.everything{
+    height: 100dvh;
+    width: 100%;
+}
 #help-me-overlay {
     position: absolute;
     top: 8dvh;
     left: 230px;
     width: 100%;
     max-width: (1920px - 230px);
+}
+.sign-in-overlay{
+    position: absolute;
+    display: flex;
+    align-items: center;
+    top: 65dvh;
+    left: 50%;
+    transform: translate( -50%, 0%);
+    padding: 1em 2em;
+    border-radius: 15px;
+    background-color: #2a3647;
+    color: white;
+    animation: slide-in-and-out 3s ease-in-out forwards;
+}
+.hidden{
+    display: none;
 }
