--- a/src/styles.scss
+++ b/src/styles.scss
@@ -176,6 +176,30 @@ button {
     }
 }
 
+@keyframes slide-in-and-out {
+    0% {
+        transform: translateX(20vw);
+        opacity: 0;
+    }
+    20% {
+        left: 50%;
+        transform: translateX(-50%);
+        opacity: 1;
+    }
+    50% {
+        left: 50%;
+        transform: translateX(-50%);
+        opacity: 1;
+    }
+    80% {
+        transform: translateX(20vw);
+        opacity: 0;
+    }
+    100% {
+        transform: translateX(20vw);
+        opacity: 0;
+    }
+}
 @keyframes fade-in {
     0% {
         opacity: 0;
@@ -199,6 +223,7 @@ button {
         transform: translate(-50%, -50%) translateX(0);
     }
 }
+
 
 @keyframes fade-in-left-overlay-viewport {
     0% {
