--- a/src/app/signup-overlay/signup-overlay.component.scss
+++ b/src/app/signup-overlay/signup-overlay.component.scss
@@ -195,6 +195,7 @@ p{
 
 .error-message{
     display: flex;
+    flex-direction: column;
     width: 100%;
     height: 2em;
     margin-top: -2em;
