--- a/src/app/kanban/kanban-edit/kanban-edit.component.scss
+++ b/src/app/kanban/kanban-edit/kanban-edit.component.scss
@@ -1,3 +1,5 @@
+@import "./../../../styles.scss";
+
 .dimmed-background {
     z-index: 5;
     position: fixed;
@@ -5,7 +7,6 @@
     left: 0;
     width: 100%;
     background-color: rgba(0, 0, 0, 0.205);
-
 
     .overlay-kanban-edit {
         display: flex;
@@ -19,12 +20,9 @@
         font-size: 10px;
         background-color: white;
 
-
         .close-button {
             z-index: 5;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+            @include flex();
             position: absolute;
             top: 4em;
             right: 4em;
@@ -52,10 +50,6 @@
             @media(max-width: 430px) {
                 padding: 28px 20px 28px 20px
             }
-
-            //             @media(max-width: 380px){
-            //     padding: 18px 10px 18px 10px
-            // }
 
             .content-in-overlay {
                 display: flex;
@@ -194,9 +188,7 @@
                             width: 2em;
                             height: 2em;
                             font-size: 1.6em;
-                            display: flex;
-                            align-items: center;
-                            justify-content: center;
+                            @include flex();
                             border-radius: 1em;
                             color: white;
                         }
@@ -223,8 +215,6 @@
                             overflow-x: hidden;
                             color: white;
 
-
-
                             &:hover {
                                 border: 2px rgba(0, 0, 0, 0.694) solid;
                             }
@@ -232,13 +222,9 @@
                             &:focus {
                                 border: 1px #29ABE2 solid;
                             }
-
                         }
                     }
-
                 }
-
-
 
                 .kanban-overlay-subtask {
                     width: 100%;
@@ -398,41 +384,6 @@
                 }
             }
         }
-    }
-}
-
-.mat-mdc-option:focus.mdc-list-item,
-.mat-mdc-option.mat-mdc-option-active.mdc-list-item {
-    display: flex;
-    flex-direction: row-reverse;
-    background-color: #2a3647;
-    color: white;
-
-
-
-    &:hover {
-        background-color: #091931;
-    }
-}
-
-.mat-mdc-option.mdc-list-item {
-    display: flex;
-    flex-direction: row-reverse;
-    background: white;
-
-    .select-initials {
-        width: 2em;
-        height: 2em;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border-radius: 1em;
-        margin-right: 1em;
-        color: white;
-    }
-
-    &:hover {
-        background: #eeeeee;
     }
 }
 
