--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,3 +1,5 @@
+@import "./../../styles.scss";
+
 section {
     width: 100%;
     max-width: (1920px);
@@ -58,7 +60,6 @@ section {
                 z-index: 1000;
                 animation: moveLogo 1.25s ease-in-out;
                 position: absolute;
-
                 left: 0;
                 top: 0;
                 content: url('./../../../public/assets/img/header/Logo.png');
@@ -94,9 +95,7 @@ section {
 
             .register-button {
                 color: white;
-                display: flex;
-                justify-content: center;
-                align-items: center;
+                @include flex();
                 background-color: #2a3647;
                 border: solid rgba(0, 0, 0, 0.049) 2px;
                 border-radius: 10px;
@@ -123,10 +122,8 @@ section {
 
     .login-overlay {
         background-color: white;
-        display: flex;
+        @include flex();
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
         width: 640px;
         height: 540px;
         border-radius: 20px;
@@ -138,10 +135,8 @@ section {
 
         .login-title {
             font-size: 10px;
-            display: flex;
+            @include flex();
             flex-direction: column;
-            justify-content: center;
-            align-items: center;
             gap: 0.5em;
 
             h1 {
@@ -167,10 +162,8 @@ section {
             width: 100%;
 
             form {
-                display: flex;
+                @include flex();
                 flex-direction: column;
-                justify-content: center;
-                align-items: center;
                 gap: 1em;
                 width: 100%;
 
@@ -186,9 +179,7 @@ section {
                 }
 
                 .input-wrapper {
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
+                    @include flex();
                     position: relative;
                     margin-bottom: 1rem;
                     width: 100%;
@@ -221,9 +212,7 @@ section {
                 }
 
                 .form-btn {
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
+                    @include flex();
                     width: 100%;
                     gap: 1em;
                     margin-top: 2.5em;
@@ -234,9 +223,7 @@ section {
 
                     .login-button {
                         color: white;
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
+                        @include flex();
                         background-color: #2a3647;
                         border: solid rgba(0, 0, 0, 0.049) 2px;
                         border-radius: 10px;
@@ -257,9 +244,7 @@ section {
                     }
 
                     .guest-button {
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
+                        @include flex();
                         background-color: transparent;
                         border: solid rgba(0, 0, 0, 0.144) 2px;
                         border-radius: 10px;
@@ -290,9 +275,7 @@ section {
 
         @media (max-width: 750px) {
             margin-top: 2em;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            @include flex();
             width: 100%;
             height: 4em;
             gap: 1.5em;
@@ -300,9 +283,7 @@ section {
 
         .register-btn-mobile {
             color: white;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            @include flex();
             background-color: #2a3647;
             border: solid rgba(0, 0, 0, 0.049) 2px;
             border-radius: 10px;
@@ -321,9 +302,7 @@ section {
         width: 100%;
 
         .footer-content {
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            @include flex();
             width: 100%;
             height: 6em;
             gap: 2em;
