--- a/src/app/summary/summary-content/summary-content.component.html
+++ b/src/app/summary/summary-content/summary-content.component.html
@@ -36,7 +36,7 @@
       <div class="deadline-priority-container">
         <div class="deadline-priority">
           <div class="priority">
-            <img src="../../../../assets/img/summary/urgentDefaultIcon.png">
+            <img src="assets/img/summary/urgentDefaultIcon.png">
             <div class="category-number-container">
               <p>{{urgentCount}}</p>
               <span class="text-input">Urgent</span>
