--- a/src/app/kanban/kanban-board/kanban-board.component.scss
+++ b/src/app/kanban/kanban-board/kanban-board.component.scss
@@ -17,6 +17,7 @@ section {
 			display: flex;
 			justify-content: space-between;
 			flex-wrap: wrap;
+			overflow-y: auto;
 
 			.task-column {
 				margin: 0px 10px;
@@ -51,8 +52,6 @@ section {
 					width: 100%;
 					height: 100%;
 					scrollbar-width: none;
-									overflow-y: hidden;
-
 
 					@media (max-width: 1300px) {
 						width: 100%;
