--- a/src/app/summary/summary-content/summary-content.component.html
+++ b/src/app/summary/summary-content/summary-content.component.html
@@ -45,7 +45,7 @@
 
           <div class="hyphen"></div>
           <div class="deadline">
-            <span id="date">{{ today | date:'MMMM d, yyyy' }}</span>
+            <span id="date">{{nextDeadline}}</span>
             <span id="deadline">Upcoming Deadline</span>
           </div>
         </div>
