Improve responsive styles and UI layout adjustments
Refined SCSS for multiple components to enhance responsiveness and layout, including reduced margins and sizes for mobile, improved flex layouts, and better button positioning. Fixed a logic error in signup overlay username validation. Commented out the base href in index.html for local development.

--- a/src/app/shared/help-me/help-me.component.html
+++ b/src/app/shared/help-me/help-me.component.html
@@ -1,7 +1,7 @@
 <div class="main-content">
-  <div class="main-content-input">
+    <div class="main-content-input">
         <div class="help-me-content">
-            <div class="title-menu"><h1>Help</h1></div><button (click)="hideHelp()" class="back-button"></button>
+            <div class="title-menu"><h1>Help</h1><button (click)="hideHelp()" class="back-button"></button></div>
             <div><p>Welcome to the help page for <span>join</span>, your guide to using our kanban project management tool. Here, we'll provide an overview of what <span>Join</span> is, how it can benefit you, and how to use it.</p></div>
             <h2>What is Join?</h2>
             <div>
@@ -27,6 +27,6 @@
             </div>
             <h2>Enjoy using Join!</h2>
         </div>
-  </div>
+    </div>
 </div>
 <app-nav-footer-mobile></app-nav-footer-mobile>
