--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -121,16 +121,19 @@ section {
     }
 
     .login-overlay {
+        padding: 1em 0em 1em 0em;
         background-color: white;
         @include flex();
         flex-direction: column;
         width: 640px;
-        height: 540px;
         border-radius: 20px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 
         @media (max-width: 750px) {
             width: 80%;
+        }
+        @media(min-width:750px){
+            height: 500px;
         }
 
         .login-title {
@@ -164,8 +167,11 @@ section {
             form {
                 @include flex();
                 flex-direction: column;
-                gap: 1em;
                 width: 100%;
+
+                p{
+                    font-size: 14px;
+                }
 
                 input {
                     cursor: pointer;
@@ -181,7 +187,7 @@ section {
                 .input-wrapper {
                     @include flex();
                     position: relative;
-                    margin-bottom: 1rem;
+                    margin-top: 1rem;
                     width: 100%;
                 }
 
@@ -214,8 +220,8 @@ section {
                 .form-btn {
                     @include flex();
                     width: 100%;
-                    gap: 1em;
-                    margin-top: 2.5em;
+                    gap: 0.8em;
+                    margin-top: 1em;
 
                     @media (max-width: 750px) {
                         flex-direction: column;
@@ -304,7 +310,7 @@ section {
         .footer-content {
             @include flex();
             width: 100%;
-            height: 6em;
+            height: 4em;
             gap: 2em;
 
             a {
