--- a/src/app/contacts/info-screen-mobile/info-screen-mobile.component.html
+++ b/src/app/contacts/info-screen-mobile/info-screen-mobile.component.html
@@ -94,6 +94,7 @@
                         {{ overlayState.selectedUser.phone }}
                     </p>
                 </div>
+                <div class="field-mobile-button">
                 <div
                     class="edit-mobilebtn"
                     (click)="toggleDropdown()"
@@ -137,6 +138,8 @@
                         </div>
                     </div>
                 </div>
+                </div>
+
             </div>
         </section>
         }
