--- a/src/app/kanban/kanban-board/kanban-board.component.scss
+++ b/src/app/kanban/kanban-board/kanban-board.component.scss
@@ -209,7 +209,7 @@ section {
 	}
 
 	.no-task-place-holder {
-		margin-top: 20px;
+		margin: 20px 0px;
 		color: #b4afaf;
 		display: flex;
 		justify-content: center;
