feat: routerlink legal notice & policy; Style: kanvban-edit overlay

--- a/src/app/shared/legal-notice-sign-in/legal-notice-sign-in.component.html
+++ b/src/app/shared/legal-notice-sign-in/legal-notice-sign-in.component.html
@@ -41,7 +41,7 @@
     </div>
 </div>
 <div class="nav-mobile">
-    <div class="logo-login-mobile">
+    <div class="logo-login-mobile" [routerLink]="'/login'">
         <img src="assets/img/sign-up/login.svg" alt="">
         <span class="span-one-mobile">Log In</span>
     </div>
