--- a/src/app/kanban/kanban-board/full-card/full-card.component.scss
+++ b/src/app/kanban/kanban-board/full-card/full-card.component.scss
@@ -13,6 +13,7 @@ section {
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
+    justify-content: space-around;
     padding: 25px;
     border-radius: 20px;
     background-color: rgb(255, 255, 255);
