--- a/src/app/kanban/kanban-edit/kanban-edit.component.scss
+++ b/src/app/kanban/kanban-edit/kanban-edit.component.scss
@@ -16,7 +16,9 @@
         border-radius: 25px;
         overflow: hidden; //damit border-radius geht
         width: 100%;
-        height: 80em;
+        /*         height: 80em;
+ */
+        height: 100%;
         font-size: 10px;
         background-color: white;
 
