style: signup overlay error messages edited

--- a/src/app/signup-overlay/signup-overlay.component.html
+++ b/src/app/signup-overlay/signup-overlay.component.html
@@ -45,7 +45,7 @@
             <p>You need firstname & lastname</p>
             }
             @if (form.get('password')?.value !== form.get('confirmPassword')?.value && form.get('confirmPassword')?.touched) {
-            <p>Your passwords don't match. Please try again.</p>
+            <p>Your passwords don't match.</p>
             }
           </div>
 
