style: edit contact list add button

--- a/src/app/contacts/contact-list/contact-list.component.scss
+++ b/src/app/contacts/contact-list/contact-list.component.scss
@@ -59,7 +59,7 @@ section {
     width: 56px;
     height: 56px;
     position: fixed;
-    top: 83em;
+    top: 80%;
     right: 3em;
     justify-content: center;
     align-items: center;
